Fix Horizontal Scrollbar

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -24,6 +24,7 @@
 
 html {
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 body{
